Disable taxonomies; we have no templates for them

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Hugo Skeleton"
+# We disable taxonomies because we don't provide templates for them, and they
+# don't apply to our minimal use case.
+disableKinds = ["taxonomy", "taxonomyTerm"]
