Remove taxonomyTerm from exclude list
This resolves the following warning when building:

    WARN  DEPRECATED: Kind "taxonomyterm" used in disableKinds is deprecated, use "taxonomy" instead.

--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ languageCode = "en-us"
 title = "Hugo Skeleton"
 # We disable taxonomies because we don't provide templates for them, and they
 # don't apply to our minimal use case.
-disableKinds = ["taxonomy", "taxonomyTerm"]
+disableKinds = ["taxonomy"]
